# article-recommender-service

./: README.md
backend/: .gitignore  faiss_index.py  gen_embeddings.py  main.py  pyproject.toml
backend/src/api/routes/: predict.py  router.py
backend/src/core/: definitions.py
backend/src/schemas/: requests.py
backend/src/services/: embeddings.py  search.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue
